--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,18 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  database: pixswap
+  host: 127.0.0.1
+  username: joe
+  password: taxi
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: pixswap
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
