--- a/package.yml
+++ b/package.yml
@@ -2,4 +2,11 @@
 package:
   type: app
   name: pixswap
-  label: Piswap
+  label: Pisxwap
+  description: Puzzles api
+  version: 1.0.0
+  dependencies: []
+application:
+  use_store: true
+
+
