--- a/src/api/config/database.yml
+++ b/src/api/config/database.yml
@@ -12,6 +12,11 @@ default: &default
 
 development:
   <<: *default
+  database: pixswap
+  host: 127.0.0.1
+  username: joe
+  password: taxi
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
