--- a/package.yml
+++ b/package.yml
@@ -3,7 +3,7 @@ package:
   name: pixswap
   label: Pisxwap
   description: Puzzles api
-  version: 1.1.4-alpha0
+  version: 1.1.5
   dependencies: []
 application:
   use_store: true
